--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -1347,7 +1347,7 @@ div.tooltip {
   }
 
   em {
-    color: @myhordes-button-color;
+    color: @myhordes-help-color;
   }
 
   &>h1:first-child {
@@ -1386,6 +1386,9 @@ div.tooltip {
     }
     strong {
       color: #ffaa88;
+    }
+    em {
+      color: @myhordes-button-color;
     }
   }
 
