Fix voted building color

--- a/assets/less/modules/constructions.less
+++ b/assets/less/modules/constructions.less
@@ -57,8 +57,8 @@ div.buildings {
     }
 
     &.voted {
-      background: lighten(@myhordes-building-complete-row-color, 20%); &>.cell { background: lighten(@myhordes-building-complete-row-color, 20%); }
-      &> div.cell:first-child:before { background: lighten(@myhordes-building-complete-header-color, 20%); }
+      background: #6B3977; &>.cell { background: #6B3977; }
+      &> div.cell:first-child:before { background: #6B3977; }
     }
 
     .vote {
