--- a/assets/less/modules/forum.less
+++ b/assets/less/modules/forum.less
@@ -80,6 +80,8 @@
     }
   }
 
+  & blockquote .quoteauthor { margin-left: 0 !important; }
+
   ul,ol {clear:left;}
 
   ul.poll {
@@ -106,6 +108,8 @@
   blockquote {
     font-style: italic; border-color: rgba(0,0,0,.6); border-style: dashed; border-width: 0 0 1px 1px;
     padding-left: 10px; font-size: .875em; opacity: .7;
+
+    & blockquote { margin-left: 10px; margin-right: 0; opacity: 1; font-size: 1em; }
   }
 
   .spoiler {
