--- a/templates/ajax/game/town/home_foreign.html.twig
+++ b/templates/ajax/game/town/home_foreign.html.twig
@@ -372,7 +372,7 @@
                     <div class="help">{{'Jetzt, da {citizen} tot ist, kannst du ihm einen <strong>Gegenstand klauen</strong>, wenn du möchtest...'|trans({citizen: owner}, 'game')|raw}}</div>
                     {% endif %}
                     <p>{{'Beim Durchwühlen seines Hauses entdeckst du folgende Dinge:'|trans({ref: owner}, 'game')}}</p>
-                    {% embed "ajax/game/inventory.html.twig" with {'size': chest_size, 'items': chest.items, 'foreignChestMode': true} %}
+                    {% embed "ajax/game/inventory.html.twig" with {'size': chest_size, 'items': chest.items, 'foreignChestMode': true, 'showFreeSlots': false} %}
                         {% block class %}chest {% if already_stolen %}locked{% endif %}{% endblock %}
                         {% block title %}{% endblock %}
                     {% endembed %}
@@ -477,7 +477,7 @@
 
             {% if intruding > 0 %}
                 handleItems(
-                    document.querySelectorAll('.chest>.item:not(.locked)[x-item-id]'),
+                    document.querySelectorAll('.chest:not(.locked)>.item:not(.locked)[x-item-id]'),
                     '{{ path('town_visit_item_controller', {id: owner.id}) }}',
                     'up', '{{ path('town_visit', {id: owner.id}) }}'
                 );
@@ -539,7 +539,7 @@
             });
         {% else %}
             handleItems(
-                document.querySelectorAll('.chest>.item:not(.locked)[x-item-id]'),
+                document.querySelectorAll('.chest:not(.locked)>.item:not(.locked)[x-item-id]'),
                 '{{ path('town_visit_item_controller', {id: owner.id}) }}',
                 'up', '{{ path('town_visit', {id: owner.id}) }}'
             );
