Fix forum-tooltip's em content

--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -1401,6 +1401,9 @@ div.tooltip {
     border: 1px solid #f0d79e;
     outline: 1px solid #5c2b20;
     color: white;
+    em {
+      color: @myhordes-button-color;
+    }
   }
 }
 
