--- a/templates/ajax/game/town/town.html.twig
+++ b/templates/ajax/game/town/town.html.twig
@@ -312,7 +312,7 @@
                             {% endfor %}
                         </div>
                     </div>
-                    <div class="row town-buildings hide-md hide-sm">
+                    <div class="row town-buildings hide-sm">
                         <ul>
                             {% for building in builtbuildings|sort((a, b) => a.prototype.orderBy <=> b.prototype.orderBy ) %}
                                 <li class="cell padded-small rw-12">
