--- a/templates/ajax/game/actions.html.twig
+++ b/templates/ajax/game/actions.html.twig
@@ -34,6 +34,52 @@
         </div>
     {% endmacro %}
 
+    {% macro inline_action_renderer(scout, actions) %}
+        {% for entry in actions|sort((a,b) => ( b.item.essential <=> a.item.essential ?: a.item.inventory.id <=> b.item.inventory.id ?: a.item.prototype.label|trans({}, 'items') <=> b.item.prototype.label|trans({}, 'items') ?: a.action.label|trans({},'items') <=> b.action.label|trans({},'items') )) %}
+            <span class="small action {% if entry.broken is defined and entry.broken %}broken-item{% else %}pointer{% endif %}" {% if entry.crossed %}disabled{% elseif entry.broken is defined and entry.broken %}{% else %}x-action-id="{{ entry.id }}" {% if entry.action.confirm %}x-action-confirm="1"{% endif %} x-provoking-id="{{ entry.item.id }}"{% endif %}>
+
+                {% if scout and entry.action.keepsCover %}
+                    <img class="float-right" src="{{ asset('build/images/icons/small_stealthy.gif') }}" alt="">
+                {% endif %}
+
+                {{ entry.action.label|trans({},'items') }}
+
+                {% if entry.message is defined and entry.message is not null and not (entry.broken is defined and entry.broken) %}
+                    <div class="tooltip normal">{{ entry.message|raw }}</div>
+                {% endif %}
+            </span>
+        {% endfor %}
+    {% endmacro %}
+
+    {% macro target_macro_renderer( scout, renderer, target_for, actions ) %}
+        <div class="targets rendered-targets" x-target-selection-for="{{ target_for }}">
+
+            {% if renderer == 'tamer_dog_popup' %}
+
+                <div>
+                    {{ 'Befiehl {dogname}, deinen Rucksackinhalt in die Stadt zu bringen:'|trans({'dogname': app.user|dogname}, 'items') }}
+                    <div>{{ _self.inline_action_renderer( scout, actions|filter(a => a.action.name == 'hero_tamer_1' or a.action.name == 'hero_tamer_2' ) ) }}</div>
+                    <div>{{ _self.inline_action_renderer( scout, actions|filter(a => a.action.name == 'hero_tamer_1b' or a.action.name == 'hero_tamer_2b' ) ) }}</div>
+                </div>
+
+                {% if actions|filter(a => a.action.name == 'hero_tamer_3' ) is not empty %}
+                    <div>
+                        {{ 'Du kannst ihn auch mit Drogen dopen:'|trans({}, 'items') }}
+                        <div><img alt="" src="{{ asset('build/images/item/item_drug.gif') }}"> {{ _self.inline_action_renderer( scout, actions|filter(a => a.action.name == 'hero_tamer_3' ) ) }}</div>
+                    </div>
+                {% endif %}
+
+                <div class="help">
+                    {{ 'Achtung: Entferne alle Gegenstände aus deinem Rucksack, die du NICHT in die Stadt senden möchtest!'|trans({}, 'items') }}
+                </div>
+            {% else %}
+                [ WARNING: UNKNOWN ACTION ACCUMULATOR "{{ renderer }}" ]
+            {% endif %}
+
+            <div class="right"><span x-close-for="{{ target_for }}">{{ 'Schließen'|trans({},'global') }}</span></div>
+        </div>
+    {% endmacro %}
+
     {% if (item_action_list is defined and item_action_list|length > 0) or (recipe_list is defined and recipe_list.recipes|length > 0)  %}
         {% if iec is defined and iec %}
             <button x-item-action-toggle="1" class="mb-1">
@@ -47,34 +93,60 @@
         {% endif %}
         <ul class="actions">
             {% if (item_action_list is defined) %}
+                {% set processed_renderers = [] %}
                 {% for entry in item_action_list|sort((a,b) => ( b.item.essential <=> a.item.essential ?: a.item.inventory.id <=> b.item.inventory.id ?: a.item.prototype.label|trans({}, 'items') <=> b.item.prototype.label|trans({}, 'items') ?: a.action.label|trans({},'items') <=> b.action.label|trans({},'items') )) %}
-                    <li class="action {% if entry.broken is defined and entry.broken %}broken-item{% endif %}" {% if entry.crossed %}disabled{% elseif entry.broken is defined and entry.broken %}{% elseif entry.targets is null %}x-action-id="{{ entry.id }}" {% if entry.action.confirm %}x-action-confirm="1"{% endif %} x-provoking-id="{{ entry.item.id }}"{% else %}x-target-definition="{{ entry.id }}--{{ entry.item.id }}"{% endif %}>
-                        <img src="{{ asset('build/images/item/item_' ~ entry.item.prototype.icon ~ '.gif') }}" alt="{{ entry.item.prototype.label|trans({},'items') }}">
-                        {% if scout and entry.action.keepsCover %}
-                            <img class="float-right" src="{{ asset('build/images/icons/small_stealthy.gif') }}" alt="">
-                        {% endif %}
-                        <span>{{ '{action}: {item}'|trans({'{action}': entry.action.label|trans({},'items')|e('html'), '{item}': '<b>' ~ entry.item.prototype.label|trans({},'items')|e('html') ~ '</b>'},'items')|raw }}</span>
-                        {% if entry.targets is not null and not entry.crossed and not ( entry.broken is defined and entry.broken ) %}
-                            {% if entry.target_mode == 1 %}
-                                {{ _self.target_popup( entry.id, entry.item.id, entry.targets, entry.id ~ '--' ~ entry.item.id, 'Bitte wähle einen Gegenstand:'|trans({},'game'), 'Du verfügst über keine geeigneten Gegenstände'|trans({},'game'), true, false, entry.action.confirm, entry.action.confirmMsg, null, true ) }}
-                            {% elseif entry.target_mode in [2,3,4,5] %}
-                                {{ _self.target_popup( entry.id, entry.item.id, entry.targets|sort((a,b) => a[1]|lower <=> b[1]|lower), entry.id ~ '--' ~ entry.item.id, 'Bitte wähle einen Bürger:'|trans({},'game'), 'Es ist kein Bürger in der Nähe...'|trans({},'game'), true, true, entry.action.confirm, entry.action.confirmMsg ) }}
-                            {% elseif entry.target_mode == 6 %}
-                                {% set target_poison = 'can_poison'|items|map(i => '<span class="highlight"><img src="' ~ asset('build/images/item/item_' ~ i.icon ~ '.gif')  ~ '" alt="">' ~ i.label|trans({},'items') ~ '</span>') %}
-                                {{ _self.target_popup( entry.id, entry.item.id, entry.targets, entry.id ~ '--' ~ entry.item.id, 'Bitte wähle einen Gegenstand:'|trans({},'game'), 'Du hast nichts, womit du {poison} kombinieren kannst. Du benötigst einen der folgenden Gegenstände:<br />{list_head} oder {list_tail}.'|trans({'{poison}': '<span class="highlight"><img src="' ~ asset('build/images/item/item_' ~ entry.item.prototype.icon ~ '.gif')  ~ '" alt="">' ~ entry.item.prototype.label|trans({},'items') ~ '</span>', '{list_head}': target_poison|slice(0,-1)|join(', '), '{list_tail}': target_poison|slice(-1,1)|join(', ')},'game')|raw, true, false, entry.action.confirm, entry.action.confirmMsg ) }}
-                            {% else %}
-                                {{ _self.target_popup( entry.id, entry.item.id, entry.targets, entry.id ~ '--' ~ entry.item.id, 'Bitte wähle einen Gegenstand:'|trans({},'game'), 'Du verfügst über keine geeigneten Gegenstände'|trans({},'game'), true, false, entry.action.confirm, entry.action.confirmMsg ) }}
-                            {% endif %}
+
+                    {% if entry.renderer is null or entry.renderer not in processed_renderers %}
+
+                        {% if entry.renderer is not null %}
+                            {% set processed_renderers = processed_renderers|merge([entry.renderer]) %}
                         {% endif %}
 
-                        {% if entry.message is defined and entry.message is not null and not (entry.broken is defined and entry.broken) %}
-                            <div class="tooltip normal">{{ entry.message|raw }}</div>
-                        {% elseif entry.broken is defined and entry.broken %}
-                            <div class="tooltip normal">{{ 'Dieser Gegenstand ist <strong class="red">kaputt</strong>. Du kannst ihn zur Zeit nicht gebrauchen. Vielleicht findest du in der Stadt eine gütige Seele, der ihn reparieren kann?'|trans({},'items')|raw }}</div>
-                        {% elseif not entry.crossed %}
-                            {% embed "ajax/game/item_tooltip.html.twig" with {"item": entry.item} %}{% endembed %}
+                        {% if entry.renderer is not null %}
+                        <li class="action" x-target-definition="{{ entry.id }}--{{ entry.item.id }}">
+                        {% else %}
+                        <li class="action {% if entry.broken is defined and entry.broken %}broken-item{% endif %}" {% if entry.crossed %}disabled{% elseif entry.broken is defined and entry.broken %}{% elseif entry.renderer is null %}x-action-id="{{ entry.id }}" {% if entry.action.confirm %}x-action-confirm="1"{% endif %} x-provoking-id="{{ entry.item.id }}"{% else %}x-target-definition="{{ entry.id }}--{{ entry.item.id }}"{% endif %}>
                         {% endif %}
-                    </li>
+                            <img src="{{ asset('build/images/item/item_' ~ entry.item.prototype.icon ~ '.gif') }}" alt="{{ entry.item.prototype.label|trans({},'items') }}">
+                            {% if scout and entry.action.keepsCover %}
+                                <img class="float-right" src="{{ asset('build/images/icons/small_stealthy.gif') }}" alt="">
+                            {% endif %}
+                            {% if entry.renderer is not null %}
+                                <span>
+                                    {{ '{action}: {item}'|trans({'{action}': 'Verwenden'|trans({},'items')|e('html'), '{item}': '<b>' ~ entry.item.prototype.label|trans({},'items')|e('html') ~ '</b>'},'items')|raw }}
+                                    {% if entry.renderer == 'tamer_dog_popup' %}
+                                        ({{ app.user|dogname }})
+                                    {% endif %}
+                                </span>
+                            {% else %}
+                                <span>{{ '{action}: {item}'|trans({'{action}': entry.action.label|trans({},'items')|e('html'), '{item}': '<b>' ~ entry.item.prototype.label|trans({},'items')|e('html') ~ '</b>'},'items')|raw }}</span>
+                            {% endif %}
+                            {% if entry.renderer is not null %}
+                                {{ _self.target_macro_renderer( scout, entry.renderer, entry.id ~ '--' ~ entry.item.id, item_action_list|filter(a => a.renderer == entry.renderer) ) }}
+                            {% elseif entry.targets is not null and not entry.crossed and not ( entry.broken is defined and entry.broken ) %}
+                                {% if entry.target_mode == 1 %}
+                                    {{ _self.target_popup( entry.id, entry.item.id, entry.targets, entry.id ~ '--' ~ entry.item.id, 'Bitte wähle einen Gegenstand:'|trans({},'game'), 'Du verfügst über keine geeigneten Gegenstände'|trans({},'game'), true, false, entry.action.confirm, entry.action.confirmMsg, null, true ) }}
+                                {% elseif entry.target_mode in [2,3,4,5] %}
+                                    {{ _self.target_popup( entry.id, entry.item.id, entry.targets|sort((a,b) => a[1]|lower <=> b[1]|lower), entry.id ~ '--' ~ entry.item.id, 'Bitte wähle einen Bürger:'|trans({},'game'), 'Es ist kein Bürger in der Nähe...'|trans({},'game'), true, true, entry.action.confirm, entry.action.confirmMsg ) }}
+                                {% elseif entry.target_mode == 6 %}
+                                    {% set target_poison = 'can_poison'|items|map(i => '<span class="highlight"><img src="' ~ asset('build/images/item/item_' ~ i.icon ~ '.gif')  ~ '" alt="">' ~ i.label|trans({},'items') ~ '</span>') %}
+                                    {{ _self.target_popup( entry.id, entry.item.id, entry.targets, entry.id ~ '--' ~ entry.item.id, 'Bitte wähle einen Gegenstand:'|trans({},'game'), 'Du hast nichts, womit du {poison} kombinieren kannst. Du benötigst einen der folgenden Gegenstände:<br />{list_head} oder {list_tail}.'|trans({'{poison}': '<span class="highlight"><img src="' ~ asset('build/images/item/item_' ~ entry.item.prototype.icon ~ '.gif')  ~ '" alt="">' ~ entry.item.prototype.label|trans({},'items') ~ '</span>', '{list_head}': target_poison|slice(0,-1)|join(', '), '{list_tail}': target_poison|slice(-1,1)|join(', ')},'game')|raw, true, false, entry.action.confirm, entry.action.confirmMsg ) }}
+                                {% else %}
+                                    {{ _self.target_popup( entry.id, entry.item.id, entry.targets, entry.id ~ '--' ~ entry.item.id, 'Bitte wähle einen Gegenstand:'|trans({},'game'), 'Du verfügst über keine geeigneten Gegenstände'|trans({},'game'), true, false, entry.action.confirm, entry.action.confirmMsg ) }}
+                                {% endif %}
+                            {% endif %}
+
+                            {% if entry.renderer is null %}
+                                {% if entry.message is defined and entry.message is not null and not (entry.broken is defined and entry.broken) %}
+                                    <div class="tooltip normal">{{ entry.message|raw }}</div>
+                                {% elseif entry.broken is defined and entry.broken %}
+                                    <div class="tooltip normal">{{ 'Dieser Gegenstand ist <strong class="red">kaputt</strong>. Du kannst ihn zur Zeit nicht gebrauchen. Vielleicht findest du in der Stadt eine gütige Seele, der ihn reparieren kann?'|trans({},'items')|raw }}</div>
+                                {% elseif not entry.crossed %}
+                                    {% embed "ajax/game/item_tooltip.html.twig" with {"item": entry.item} %}{% endembed %}
+                                {% endif %}
+                            {% endif %}
+                        </li>
+                    {% endif %}
                 {% endfor %}
             {% endif %}
             {% if recipe_list is defined %}
